# pole_cobotics_project

./: .gitignore  AugmentedWindow.cpp  AugmentedWindow.h  BasicTutorial1.cpp  CMakeLists.txt  README.md  UR10.cpp  UR10.h  main.cpp
meshes/: low_poly character_170cm_noPlane.blend  low_poly_chara_170cm_centered.mesh  low_poly_chara_170cm_centered.skeleton
meshes/UR10_mesh_centered/: 1_Base_centered.mesh  2_Shoulder_center.mesh
